Added Custom API Response Exception