@@ -2,6 +2,6 @@ package com.swapnixi.feedbackhub.exception;
 
 public class ResourceNotFoundException extends RuntimeException {
     public ResourceNotFoundException(String resource, String field, Object value) {
-        super(String.format("%s not found with %s : '%s'", resource, field, value));
+        super("%s not found with %s : '%s'".formatted(resource, field, value));
     }
 }
